--- a/_includes/analytics/goatcounter.html
+++ b/_includes/analytics/goatcounter.html
@@ -1,6 +1,3 @@
 <!-- GoatCounter -->
-<script
-  async
-  src="https://gc.zgo.at/count.js"
-  data-goatcounter="https://{{ site.analytics.goatcounter.id }}.goatcounter.com/count"
-></script>
+<script data-goatcounter="https://random-tales.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
