--- a/_includes/head.html
+++ b/_includes/head.html
@@ -109,6 +109,9 @@
 
   <script src="{{ site.data.assets[origin].jquery.js | relative_url }}"></script>
 
+  <script data-goatcounter="https://random-tales.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
