--- a/_includes/pageviews/goatcounter.html
+++ b/_includes/pageviews/goatcounter.html
@@ -13,7 +13,7 @@
         pv.innerText = new Intl.NumberFormat().format(count);
       })
       .catch((error) => {
-        pv.innerText = '1';
+        pv.innerText = '--';
       });
   }
 </script>
